# ROS2_TBRo

./: .gitignore  README.md  start_cosmo.sh
launch/: cosmo_launch.py  ml_node_launch.py  test_launch.py
src/ai_model_node/: package.xml  setup.cfg  setup.py
src/ai_model_node/ai_model_node/: ml_node.py  model.py
src/ai_model_node/ai_model_node/model_data/: test.txt
src/cosmo/: MANIFEST.in  package.xml  setup.cfg  setup.py
src/cosmo/cosmo/: battery_node.py  camera_node.py  control_node.py  flask_node.py  model_node.py  motor_driver_node.py  rpio.py
src/cosmo/cosmo/flask_app/: README.md  app.py
src/cosmo/cosmo/flask_app/Testing/: mediaMTXpoc.py  stockvideo
src/cosmo/cosmo/flask_app/static/: controller_script.js  script.js  styles.css
src/cosmo/cosmo/flask_app/templates/: index.html
src/cosmo/cosmo/model_hailo8/: run_model.py
src/cosmo/cosmo/msg/: SystemInfo.msg
src/cosmo/test/: test_node.py
src/cosmo/test/test_data/: battery_node._conv.txt
src/cosmo_msgs/: CMakeLists.txt  package.xml
src/cosmo_msgs/msg/: ErrorEvent.msg  SystemCommand.msg  SystemInfo.msg
