<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cosmo</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="twister2341@outlook.com">yln28</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>cosmo_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
